2010-02-04  Tamas Szirbucz  <szirbucz@inf.u-szeged.hu>

        Reviewed by Gavin Barraclough.

        Use an easily appendable structure for trampolines instead of pointer parameters.
        https://bugs.webkit.org/show_bug.cgi?id=34424

        * assembler/ARMAssembler.cpp:
        (JSC::ARMAssembler::executableCopy):
        * jit/JIT.h:
        (JSC::JIT::compileCTIMachineTrampolines):
        * jit/JITOpcodes.cpp:
        (JSC::JIT::privateCompileCTIMachineTrampolines):
        * jit/JITStubs.cpp:
        (JSC::JITThunks::JITThunks):
        * jit/JITStubs.h:
        (JSC::JITThunks::ctiStringLengthTrampoline):
        (JSC::JITThunks::ctiVirtualCallLink):
        (JSC::JITThunks::ctiVirtualCall):
        (JSC::JITThunks::ctiNativeCallThunk):

2010-02-04  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

        Reviewed by Simon Hausmann.

        Increase test coverage for the QScriptValue.

        https://bugs.webkit.org/show_bug.cgi?id=34533

        * qt/tests/qscriptvalue/qscriptvalue.pro:
        * qt/tests/qscriptvalue/tst_qscriptvalue.cpp:
        (tst_QScriptValue::tst_QScriptValue):
        (tst_QScriptValue::~tst_QScriptValue):
        (tst_QScriptValue::dataHelper):
        (tst_QScriptValue::newRow):
        (tst_QScriptValue::testHelper):
        (tst_QScriptValue::ctor):
        * qt/tests/qscriptvalue/tst_qscriptvalue.h: Added.
        * qt/tests/qscriptvalue/tst_qscriptvalue_generated.cpp: Added.
        (tst_QScriptValue::initScriptValues):
        (tst_QScriptValue::isValid_initData):
        (tst_QScriptValue::isValid_makeData):
        (tst_QScriptValue::isValid_test):
        (tst_QScriptValue::isBool_initData):
        (tst_QScriptValue::isBool_makeData):
        (tst_QScriptValue::isBool_test):
        (tst_QScriptValue::isBoolean_initData):
        (tst_QScriptValue::isBoolean_makeData):
        (tst_QScriptValue::isBoolean_test):
        (tst_QScriptValue::isFunction_initData):
        (tst_QScriptValue::isFunction_makeData):