@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007, 2008 Apple Inc. All rights reserved.
+ * Copyright (C) 2006, 2007, 2008, 2009, 2010 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -26,8 +26,8 @@
 #ifndef WTF_MathExtras_h
 #define WTF_MathExtras_h
 
+#include <cmath>
 #include <float.h>
-#include <math.h>
 #include <stdlib.h>
 
 #if OS(SOLARIS)
@@ -185,5 +185,10 @@ inline float turn2deg(float t) { return t * 360.0f; }
 inline float deg2turn(float d) { return d / 360.0f; }
 inline float rad2grad(float r) { return r * 200.0f / piFloat; }
 inline float grad2rad(float g) { return g * piFloat / 200.0f; }
+
+using std::isfinite;
+using std::isinf;
+using std::isnan;
+using std::signbit;
 
 #endif // #ifndef WTF_MathExtras_h
